# patterns

./: .gitignore  CMakeLists.txt  ClassDiagram.cd  adapter_wrapper.h  builder.h  factory_method.h  fasade.h  main.cpp  object_pool.h  patterns.sln  patterns.vcxproj  patterns.vcxproj.filters  singleton.cpp  singleton.h
behavior/: chain_of_responsibility.h  command.h  iterator.cpp  iterator.h  mediator.h  obsever.h  state.cpp  state.h  strategy.h  visitor.h
generative/: abstract_factory.h  builder.h  factory_method.h  object_pool.h  prototype.h  singleton.cpp  singleton.h
structural/: decorator.h
